<resources>
    <string name="app_name">MusicPlayerApp</string>
    <string name="image">image</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="_0_0">00:00</string>
    <string name="_3_42">3:42</string>
    <string name="one">1-</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Song Artist</string>
</resources>