<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrder"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="top"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_artist"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/_3_42"
        android:textColor="@color/black"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>
