<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_cover" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_favorite" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:theme="@style/SeekBarColor" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0_0"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_3_42"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibShuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_shuffle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibBackwardSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_fast_rewind" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ibPlay"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_play" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibForwardSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_fast_forward" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_repeat" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
